# fantasy-wp

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  db.py  espn.py  mlb.py  model.py  sim.py  stats.py  teams.py
docs/: app.js  data.json  index.html  style.css
fantasy_wp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: README.md  _common.sh  analyze_variance.py  daily.sh  fast.sh  medium.sh
