[project]
name = "fantasy-wp"
version = "0.1.0"
description = "Win probability estimator for a single ESPN H2H fantasy baseball league"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
app = "app.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
